--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "npm run build && gh-pages -d build"
   },
   "dependencies": {
+    "@vkontakte/vkui": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -31,6 +32,7 @@
     "gh-pages": "^6.1.1",
     "prettier": "^3.2.5",
     "typescript": "^5.2.2",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "vite-tsconfig-paths": "^4.3.2"
   }
 }
