--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
       "@app": ["./app/"],
       "@processes/*": ["./processes/*"],
       "@pages/*": ["./pages/*"],
-      "@widgets/*": ["./widgets/*"],
+      "@widgets": ["./widgets"],
       "@features/*": ["./features/*"],
       "@entities/*": ["./entities/*"],
       "@shared/*": ["./shared/*"]
